Terraform/alb.tf
# ALB
resource "aws_lb" "aws_study_alb" {
  name               = "aws-study-elb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb_sg.id
  ]

  subnets = [
    aws_subnet.public_subnet_1a.id,
    aws_subnet.public_subnet_1c.id
  ]

  tags = {
    Name = "aws-study-elb"
  }
}

# Target Group
resource "aws_lb_target_group" "aws_study_tg" {
  name     = "aws-study-elb-tg"
  port     = 8080
  protocol = "HTTP"
  vpc_id   = aws_vpc.aws_study_vpc.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    interval            = 10
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }

  tags = {
    Name = "aws-study-elb-tg"
  }
}

# EC2 を Target Group に登録
resource "aws_lb_target_group_attachment" "ec2_attachment" {
  target_group_arn = aws_lb_target_group.aws_study_tg.arn
  target_id        = aws_instance.aws_study_ec2.id
  port             = 8080
}

# Listener
resource "aws_lb_listener" "aws_study_listener" {
  load_balancer_arn = aws_lb.aws_study_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.aws_study_tg.arn
  }
}
